# AtividadesCG

./: CMakeLists.txt  README.md  README_ATVS.md  README_Guia_atividade_GRAU_A.md  RESULT.md  scene_config.json
common/: glad.c
include/glad/: glad.h
src/: CMakeLists.txt  CameraViewer.cpp  CubeViewer.cpp  Hello3D.cpp  ModelLoader.cpp  PhongViewer.cpp  SceneViewer.cpp  SpherePhong.cpp  TexturedViewer.cpp  ThreePointLighting.cpp  TrajectoryViewer.cpp  modelLoader.cpp
src/domain/: CMakeLists.txt  Camera.cpp  Camera.hpp  Obj.cpp  Obj.hpp  Shader.cpp  Shader.hpp  TexturedObj.cpp  TexturedObj.hpp  Trajectory.hpp
src/shaders/: camera.frag  camera.vert  phong.frag  phong.vert  shader.frag  shader.vert  textured.frag  three_point.frag  three_point.vert
